# stm32f429zit-cmake

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Windows_Setup.md  build.bat  build.sh  cleanup.sh  compile.sh  compile_commands.json  flash.sh  getIncludeList.sh  getSourceList.sh  gitcommit.sh  project.conf
Application/Inc/: main.h
Application/Src/: main.c
Core/Inc/: ADC.h  LED.h  UART.h  systick.h  timer.h
Core/Src/: ADC.c  LED.c  UART.c  systick.c  timer.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/CMSIS/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_conf.h
Tests/: CMakeLists.txt
cmake/: IncludeList.cmake  STM32F429xx_HAL_PARA.cmake  STM32F429xx_PARA.cmake  SourceList.cmake
docker/: Dockerfile  build.sh  makeimage.sh
test/: Cmakelist.txt  dummy.c  main.c
